@@ -1,0 +1,14 @@
+# $NetBSD: xfree.Xrandr,v 1.1 2004/02/16 23:39:36 jlam Exp $
+#
+include/X11/extensions/Xrandr.h
+lib/libXrandr.a
+lib/libXrandr.so
+lib/libXrandr.so.1
+lib/libXrandr.so.1.0
+lib/libXrandr.so.2
+lib/libXrandr.so.2.0
+lib/libXrandr.dylib
+lib/libXrandr.1.dylib
+lib/libXrandr.1.0.dylib
+lib/libXrandr.2.dylib
+lib/libXrandr.2.0.dylib
