@@ -1,8 +1,6 @@
-# $NetBSD: xfree.Xrender,v 1.3 2003/10/20 16:11:16 tron Exp $
+# $NetBSD: xfree.Xrender,v 1.4 2004/02/16 23:39:36 jlam Exp $
 #
 include/X11/extensions/Xrender.h
-include/X11/extensions/render.h
-include/X11/extensions/renderproto.h
 lib/libXrender.a
 lib/libXrender.so
 lib/libXrender.so.1
