@@ -1,0 +1,12 @@
+# $NetBSD: xfree.fontconfig,v 1.1 2004/02/16 23:39:36 jlam Exp $
+#
+include/fontconfig/fcfreetype.h
+include/fontconfig/fcprivate.h
+include/fontconfig/fontconfig.h
+lib/libfontconfig.a
+lib/libfontconfig.so
+lib/libfontconfig.so.1
+lib/libfontconfig.so.1.0
+lib/libfontconfig.dylib
+lib/libfontconfig.1.dylib
+lib/libfontconfig.1.0.dylib
