@@ -1,0 +1,4 @@
+# $NetBSD: xfree.render,v 1.1 2004/02/16 23:39:36 jlam Exp $
+#
+include/X11/extensions/render.h
+include/X11/extensions/renderproto.h
