@@ -1,0 +1,10 @@
+# $NetBSD: xfree.xcursor,v 1.1 2004/02/16 23:39:36 jlam Exp $
+#
+include/X11/Xcursor/Xcursor.h
+lib/libXcursor.a
+lib/libXcursor.so
+lib/libXcursor.so.1
+lib/libXcursor.so.1.0
+lib/libXcursor.dylib
+lib/libXcursor.1.dylib
+lib/libXcursor.1.0.dylib
